Fix scrollbar issues

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
   z-index: 3;
   display: flex;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   padding: 24px;
   margin: 0 (-$body-padding-small);
   @media ($tablet-up) {
