--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   transition: transform .5s ease-in, visibility .5s;
-  overflow: scroll;
+  overflow: auto;
   background: $color-primary--dark;
 
   a {
