--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: 100vw;
+  max-width: 100%;
   padding: 0 $body-padding-small;
   font-family: $sans;
   font-weight: 400;
